<?xml version="1.0"?>
<package>
  <name>aiibot_rviz_launchers</name>
  <version>0.0.0</version>
  <description>The aiibot_rviz_launchers package</description>

  <maintainer email="liufa@todo.todo">liufa</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>aiibot_description</build_depend>
  <build_depend>joint_state_publisher</build_depend>
  <build_depend>rviz</build_depend>
  <build_depend>rviz_imu_plugin</build_depend>
  <run_depend>aiibot_description</run_depend>
  <run_depend>joint_state_publisher</run_depend>
  <run_depend>rviz</run_depend>
  <run_depend>rviz_imu_plugin</run_depend>

  <export>


  </export>
</package>